--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^5.12.13",
     "mongoose-unique-validator": "^2.0.3",
     "mongoose-validator": "^2.1.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1"
   }
 }
