--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -16,6 +16,8 @@
     "mongoose-unique-validator": "^2.0.3",
     "mongoose-validator": "^2.1.0",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.6.4"
   }
 }
