--- a/groupomania/package.json
+++ b/groupomania/package.json
@@ -13,6 +13,7 @@
     "jwt-decode": "^3.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vueditor": "^0.3.1",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
