--- a/groupomania/package.json
+++ b/groupomania/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "vue-cli-service build --dest dist/app/",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "express": "^4.17.1",
     "jwt-decode": "^3.1.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
